<resources>
    <string name="app_name">FinUp</string>
    <string name="Expense">Expenses</string>
    <string name="income">Incomes</string>
    <string name="total">total:</string>
    <string name="CreateExpensePageTitle">Create expense</string>
    <string name="CreateIncomePageTitle">Create income</string>
    <string name="EditExpenseTitle">Edit expense</string>
    <string name="EditIncomeTitle">Edit income</string>
    <string name="utilities">Utilities</string>
    <string name="transfers">Transfers</string>
    <string name="groceries">Groceries</string>
    <string name="other">Other</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="dateTitle">Select date</string>
    <string name="sum_by_day">amount per day:</string>
    <string name="pick_date">pick Date</string>
</resources>